REGRESSION(r162922): [SOUP] Several tests are failing in EFL and GTK+ after r162922 https://bugs.webkit.org/show_bug.cgi?id=127836

Reviewed by Gustavo Noronha Silva.

The problem is that I assumed that several things done in
ResourceRequest::soupURI() were always desired, so I moved them to
URL. This patch restores the previous behaviour, so that those
tings are only done right before making a request.

* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::createSoupURI):
* platform/soup/URLSoup.cpp:
(WebCore::URL::createSoupURI):

Canonical link: https://commits.webkit.org/145845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163017 268f45cc-cd09-0410-ab3c-d52691b4dbfc